--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 <!--NAVBAR-->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-static-top" id="navvy">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
