--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tuscan Villa</title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,10 +19,8 @@
 </head>
 <body>
 
-<!--HEADER-->
-
-
-<!--NAVBAR-->
+    <!--HEADER-->
+    <!--NAVBAR-->
     <nav class="navbar navbar-static-top" id="navvy">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -42,26 +40,59 @@
                     <li><a href="#">LOCATIONS</a></li>
                     <li><a href="#">AMMENITIES</a></li>
                     <li><a href="#">REVIEWS</a></li>
-                    <li><a href="#">CONTACT</a></li>  
-                </ul>          
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-<!--LOCATIONS-->
+    <!--LOCATIONS-->
     <div class="jumbotron">
-       <div class="row ">
-          <img class="img-responsive col-sm-12 col-md-8"id="imgLoc"src="images/tuscany-villas-sant-anna.jpg" />
-           <img class="img-responsive col-sm-12 col-md-4" id="map"src="images/Versilia.jpg" />
-          
-       </div>
+        <div class="row ">
+            <img class="img-responsive col-sm-12 col-md-8" id="imgLoc" src="images/tuscany-villas-sant-anna.jpg" />
+            <img class="img-responsive col-sm-12 col-md-4" id="map" src="images/Versilia.jpg" />
+
+        </div>
     </div>
-<!--AMMENITIES-->
+    <div class="banner">
+        <h1 id="zeroMargon">LOCATIONS</h1>
+        <h3>Some places for you to go.</h3>
+    </div>
+    <div class="container" style="width:1500px;">
+        <div class="jumbotron localOne col-sm-12 col-md-9">
+            <h2>Location #1</h2>
+            <p id="blurbOne">Bacon ipsum dolor amet kielbasa beef ribs bacon, swine ham biltong ground round prosciutto andouille salami boudin pancetta tri-tip pig. Turkey tail boudin picanha. Shankle landjaeger porchetta short loin turducken, doner rump bacon ball tip. Meatball short loin landjaeger fatback tail.</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        </div>
+        <div class="col-sm-12 col-md-3">
+            <img class="img-responsive" id="localImgOne" src="images/italy-mountain-villa (1).jpeg" />
+        </div>
+    </div>
 
-<!--CAROUSEL-->
+    <div class="container jumboTwo" style="width:1500px;">
+        <div class="col-sm-12 col-md-3">
+            <img class="img-responsive" id="localImgTwo" src="images/modern-villa.jpeg" /> />
+        </div>
+        <div class="jumbotron localTwo col-sm-12 col-md-9">
+            <h2>Location #2</h2>
+            <p>Bacon ipsum dolor amet kielbasa beef ribs bacon, swine ham biltong ground round prosciutto andouille salami boudin pancetta tri-tip pig. Turkey tail boudin picanha. Shankle landjaeger porchetta short loin turducken, doner rump bacon ball tip. Meatball short loin landjaeger fatback tail.</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        </div>
+    </div>
 
-<!--FORUM-->
-
-<!--FOOTER-->
+    <div class="container" style="width:1500px;">
+        <div class="jumbotron localOne col-sm-12 col-md-9">
+            <h2>Location #3</h2>
+            <p id="blurbOne">Bacon ipsum dolor amet kielbasa beef ribs bacon, swine ham biltong ground round prosciutto andouille salami boudin pancetta tri-tip pig. Turkey tail boudin picanha. Shankle landjaeger porchetta short loin turducken, doner rump bacon ball tip. Meatball short loin landjaeger fatback tail.</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        </div>
+        <div class="col-sm-12 col-md-3">
+            <img class="img-responsive" id="localImgTwo" src="images/tuscany-grape-field-nature-51947.jpeg" /> 
+        </div>
+    </div>
+    <!--AMMENITIES-->
+    <!--CAROUSEL-->
+    <!--FORUM-->
+    <!--FOOTER-->
 
 
 
