--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
         </div>
     </div>
     <!--AMMENITIES-->
+    <div class="banner">
+        <h1 id="zeroMargon">AMENITIES</h1>
+        <h3>Some stuff for you to enjoy.</h3>
+    </div>
+
     <!--CAROUSEL-->
     <!--FORUM-->
     <!--FOOTER-->
