--- a/index.html
+++ b/index.html
@@ -95,7 +95,72 @@
         <h3>Some stuff for you to enjoy.</h3>
     </div>
 
+    <div class="row container amenities">
+        <!--THUMBNAILONE-->         
+        <div class="col-xs-6 col-md-4">          
+            <img src="images/Balcany.jpg" />          
+        </div>
+        <!--THUMBNAILTWO--> 
+        <div class="col-xs-6 col-md-4">
+            <div class="caption thumText">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+        </div>
+        <!--THUMBNAILTHREE--> 
+        <div class="col-xs-6 col-md-4">
+            <img src="images/pool.jpg" />
+        </div>
+    </div>
+    <!--NEXT ROW-->
+    <div class="row container amenities">
+        <!--THUMBNAILONE-->
+        <div class="col-xs-6 col-md-4">
+            <div class="caption thumText">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>>
+        </div>
+        <!--THUMBNAILTWO-->
+        <div class="col-xs-6 col-md-4">
+            <img src="images/bed.jpg" />
+        </div>
+        <!--THUMBNAILTHREE-->
+        <div class="col-xs-6 col-md-4">
+            <div class="caption thumText">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+        </div>
+    </div>
+    <!--NEXT ROW-->
+    <div class="row container amenities">
+        <!--THUMBNAILONE-->
+        <div class="col-xs-6 col-md-4">
+            <img src="images/Villa-Rucellai-Toscani-2812-2-348x348.jpg" />
+        </div>
+        <!--THUMBNAILTWO-->
+        <div class="col-xs-6 col-md-4">
+            <div class="caption thumText">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+        </div>
+        <!--THUMBNAILTHREE-->
+        <div class="col-xs-6 col-md-4">
+            <img src="images/Villa-Vanna-231-348x348.jpg" />
+        </div>
+    </div>
     <!--CAROUSEL-->
+    <div class="banner">
+        <h1 id="zeroMargon">REVIEWS</h1>
+        <h3>What our costomers say.</h3>
+    </div>
+
     <!--FORUM-->
     <!--FOOTER-->
 
