--- a/index.html
+++ b/index.html
@@ -160,9 +160,63 @@
         <h1 id="zeroMargon">REVIEWS</h1>
         <h3>What our costomers say.</h3>
     </div>
+ 
+    <div class="container">
+        <div class="row">
+<div class="col-sm-12">
 
-    <!--FORUM-->
-    <!--FOOTER-->
+    <div id="slider" class="carousel slide" data-ride="carousel">
+        <!--INDICATORS-->
+        <ol class="carousel-indicators">
+            <li data-target="#slider" data-slide-to="0" class="active"></li>
+            <li data-target="#slider" data-slide-to="1"></li>
+            <li data-target="#slider" data-slide-to="2"></li>
+        </ol>
+        <!--WRAPER-->
+        <div class="carousel-inner" role="listbox">          
+                <div class="item active">
+                    <img id="backPlate" src="images/backspash.jpg" />
+                    <div class="carousel-caption"id="captLetters">
+                        <h2>Love it! Love it! Love it!</h2>
+                        <p>Stella, avid napper</p>
+                    </div>          
+            </div>
+        </div>
+        <div class="carousel-inner" role="listbox">
+            <div class="item">
+                <img id="backPlate"src="images/backspash.jpg" />
+                <div class="carousel-caption"id="captLetters">
+                    <h2>I love it!</h2>
+                    <p>Stella, avid napper</p>
+                </div>
+            </div>  
+        </div>
+        <div class="carousel-inner" role="listbox">
+            <div class="item">
+                <img id="backPlate"src="images/backspash.jpg" />
+                <div class="carousel-caption"id="captLetters">
+                    <h2>I love it!</h2>
+                    <p>Stella, avid napper</p>
+                </div>
+            </div>
+        </div>
+        <!--CONTROLS-->
+        <a class="left carousel-control" href="#slider" roll="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        </a>
+        <a class="right carousel-control" href="#slider" roll="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        </a>
+
+    </div>
+
+</div>
+        </div>
+    </div>
+
+
+        <!--FORUM-->
+        <!--FOOTER-->
 
 
 
