--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Tuscan Villa</title>
     <meta charset="utf-8" />
 
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Domine|Sanchez" rel="stylesheet">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -86,7 +88,7 @@
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
         </div>
         <div class="col-sm-12 col-md-3">
-            <img class="img-responsive" id="localImgTwo" src="images/tuscany-grape-field-nature-51947.jpeg" /> 
+            <img class="img-responsive" id="localImgTwo" src="images/tuscany-grape-field-nature-51947.jpeg" />
         </div>
     </div>
     <!--AMMENITIES-->
@@ -96,21 +98,29 @@
     </div>
 
     <div class="row container amenities">
-        <!--THUMBNAILONE-->         
-        <div class="col-xs-6 col-md-4">          
-            <img src="images/Balcany.jpg" />          
-        </div>
-        <!--THUMBNAILTWO--> 
-        <div class="col-xs-6 col-md-4">
-            <div class="caption thumText">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <!--THUMBNAILONE-->
+        <div class="thumbnail text-center col-xs-6 col-md-4">
+            <img src="images/Balcany.jpg" />
+            <div class="insideCaption">
+                <h3>RECESPTIONS</h3>
             </div>
         </div>
-        <!--THUMBNAILTHREE--> 
+        <!--THUMBNAILTWO-->
         <div class="col-xs-6 col-md-4">
+            <div class="caption thumText">
+                <h3>A Villa for Every</h3>
+                <h3>Occation</h3>
+                <p>Tenderloin jerky picanha, ham hock bacon pig swine hamburger. Corned beef beef boudin flank short ribs. </p>
+                <p><a href="#" class="btn btn-primary btnStyle" role="button">Check It Out</a></p>
+            </div>
+        </div>
+        <!--THUMBNAILTHREE-->
+        <div class="thumbnail text-center col-xs-6 col-md-4">
             <img src="images/pool.jpg" />
+            <div class="insideCaption">
+                <h3>RELAX BY</h3>
+                <h3>THE POOL</h3>
+            </div>
         </div>
     </div>
     <!--NEXT ROW-->
@@ -118,105 +128,203 @@
         <!--THUMBNAILONE-->
         <div class="col-xs-6 col-md-4">
             <div class="caption thumText">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <h3>What Sets Us Appart</h3>
+                <p>Tenderloin jerky picanha, ham hock bacon pig swine hamburger. Corned beef beef boudin flank short ribs. </p>
+                <p><a href="#" class="btn btn-primary btnStyle" role="button">Check It Out</a></p>
             </div>>
         </div>
         <!--THUMBNAILTWO-->
-        <div class="col-xs-6 col-md-4">
+        <div class="thumbnail text-center col-xs-6 col-md-4">
             <img src="images/bed.jpg" />
+            <div class="insideCaption">
+                <h3>FEELS LIKE</h3>
+                <h3>HOME</h3>
+            </div>
         </div>
         <!--THUMBNAILTHREE-->
         <div class="col-xs-6 col-md-4">
             <div class="caption thumText">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <h3>Talk To Our Staff</h3>
+                <p>Tenderloin jerky picanha, ham hock bacon pig swine hamburger. Corned beef beef boudin flank short ribs. </p>
+                <p><a href="#" class="btn btn-primary btnStyle" role="button">Check It Out</a></p>
             </div>
         </div>
     </div>
     <!--NEXT ROW-->
     <div class="row container amenities">
         <!--THUMBNAILONE-->
-        <div class="col-xs-6 col-md-4">
+        <div class="thumbnail text-center col-xs-6 col-md-4">
             <img src="images/Villa-Rucellai-Toscani-2812-2-348x348.jpg" />
+            <div class="insideCaption">
+                <h3>ENJOY THE</h3>
+                <h3>VIEWS</h3>
+            </div>
         </div>
         <!--THUMBNAILTWO-->
         <div class="col-xs-6 col-md-4">
             <div class="caption thumText">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <h3>Book Your Villa</h3>
+                <p>Tenderloin jerky picanha, ham hock bacon pig swine hamburger. Corned beef beef boudin flank short ribs. </p>
+                <p><a href="#" class="btn btn-primary btnStyle" role="button">Check It Out</a></p>
             </div>
         </div>
         <!--THUMBNAILTHREE-->
-        <div class="col-xs-6 col-md-4">
+        <div class="thumbnail text-center col-xs-6 col-md-4">
             <img src="images/Villa-Vanna-231-348x348.jpg" />
+            <div class="insideCaption">
+                <h3>PRIVATE</h3>
+                <h3>DINING</h3>
+            </div>
         </div>
     </div>
     <!--CAROUSEL-->
-    <div class="banner">
+    <div class="revBanner">
         <h1 id="zeroMargon">REVIEWS</h1>
         <h3>What our costomers say.</h3>
     </div>
- 
+
     <div class="container">
         <div class="row">
-<div class="col-sm-12">
+            <div class="col-sm-12">
 
-    <div id="slider" class="carousel slide" data-ride="carousel">
-        <!--INDICATORS-->
-        <ol class="carousel-indicators">
-            <li data-target="#slider" data-slide-to="0" class="active"></li>
-            <li data-target="#slider" data-slide-to="1"></li>
-            <li data-target="#slider" data-slide-to="2"></li>
-        </ol>
-        <!--WRAPER-->
-        <div class="carousel-inner" role="listbox">          
-                <div class="item active">
-                    <img id="backPlate" src="images/backspash.jpg" />
-                    <div class="carousel-caption"id="captLetters">
-                        <h2>Love it! Love it! Love it!</h2>
-                        <p>Stella, avid napper</p>
-                    </div>          
+                <div id="slider" class="carousel slide" data-ride="carousel">
+                    <!--INDICATORS-->
+                    <ol class="carousel-indicators">
+                        <li data-target="#slider" data-slide-to="0" class="active"></li>
+                        <li data-target="#slider" data-slide-to="1"></li>
+                        <li data-target="#slider" data-slide-to="2"></li>
+                    </ol>
+                    <!--WRAPER-->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img id="backPlate" src="images/backspash.jpg" />
+                            <div class="carousel-caption" id="captLetters">
+                                <h2>Love it! Love it! Love it!</h2>
+                                <p>Stella, avid napper</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item">
+                            <img id="backPlate" src="images/backspash.jpg" />
+                            <div class="carousel-caption" id="captLetters">
+                                <h2>I love it!</h2>
+                                <p>Stella, avid napper</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item">
+                            <img id="backPlate" src="images/backspash.jpg" />
+                            <div class="carousel-caption" id="captLetters">
+                                <h2>I love it!</h2>
+                                <p>Stella, avid napper</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--CONTROLS-->
+                    <a class="left carousel-control" href="#slider" roll="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    </a>
+                    <a class="right carousel-control" href="#slider" roll="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="carousel-inner" role="listbox">
-            <div class="item">
-                <img id="backPlate"src="images/backspash.jpg" />
-                <div class="carousel-caption"id="captLetters">
-                    <h2>I love it!</h2>
-                    <p>Stella, avid napper</p>
-                </div>
-            </div>  
-        </div>
-        <div class="carousel-inner" role="listbox">
-            <div class="item">
-                <img id="backPlate"src="images/backspash.jpg" />
-                <div class="carousel-caption"id="captLetters">
-                    <h2>I love it!</h2>
-                    <p>Stella, avid napper</p>
+    </div>
+    <!--FORUM-->
+    <div class="row">
+        <div class="jumbotron jumbotron-sm contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-12">
+                        <h1 class="h1">
+                            Contact us <small>Feel free to contact us</small>
+                        </h1>
+                    </div>
                 </div>
             </div>
         </div>
-        <!--CONTROLS-->
-        <a class="left carousel-control" href="#slider" roll="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        </a>
-        <a class="right carousel-control" href="#slider" roll="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        </a>
+        <div class="container">
+            <div class="col-md-4">
+                <form>
+                    <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
+                    <address>
+                        
+                        Contact us and we will get back to you in 24 hours.<br>
+                       
+                        <abbr title="Phone">
+                            P:
+                        </abbr>
+                        (555) 555-1212
+                    </address>
+                    <address>
+                        <strong>Full Name</strong><br>
+                        <a href="mailto:#">some.person@sweetvillas.com</a>
+                    </address>
+                </form>
+            </div>
+            <div class="col-md-8">
+                <div class="well well-sm">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="name">
+                                        Name
+                                    </label>
+                                    <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">
+                                        Email Address
+                                    </label>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-envelope"></span>
+                                        </span>
+                                        <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="subject">
+                                        Subject
+                                    </label>
+                                    <select id="subject" name="subject" class="form-control" required="required">
+                                        <option value="na" selected="">Choose One:</option>
+                                        <option value="service">General Customer Service</option>
+                                        <option value="suggestions">Suggestions</option>
+                                        <option value="product">Product Support</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="name">
+                                        Message
+                                    </label>
+                                    <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
+                                              placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
+                                    Send Message
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
 
-    </div>
-
-</div>
         </div>
     </div>
-
-
-        <!--FORUM-->
-        <!--FOOTER-->
+    <!--FOOTER-->
+    <div class="footer">
+        <h1 id="zeroMargon">Created by Shawn Born-Newton</h1>
+        <h3>Not at all copyrighted.</h3>
+    </div>
 
 
 
