--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <h1 id="zeroMargon">LOCATIONS</h1>
         <h3>Some places for you to go.</h3>
     </div>
+    <!--LOCATION ONE-->
     <div class="container" style="width:1500px;">
         <div class="jumbotron localOne col-sm-12 col-md-9">
             <h2>Location #1</h2>
@@ -69,7 +70,7 @@
             <img class="img-responsive" id="localImgOne" src="images/italy-mountain-villa (1).jpeg" />
         </div>
     </div>
-
+    <!--LOCATION TWO-->
     <div class="container jumboTwo" style="width:1500px;">
         <div class="col-sm-12 col-md-3">
             <img class="img-responsive" id="localImgTwo" src="images/modern-villa.jpeg" /> />
@@ -80,7 +81,7 @@
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
         </div>
     </div>
-
+    <!--LOCATION THREE-->
     <div class="container" style="width:1500px;">
         <div class="jumbotron localOne col-sm-12 col-md-9">
             <h2>Location #3</h2>
@@ -150,7 +151,7 @@
             </div>
         </div>
     </div>
-    <!--NEXT ROW-->
+    <!--LAST ROW-->
     <div class="row container amenities">
         <!--THUMBNAILONE-->
         <div class="thumbnail text-center col-xs-6 col-md-4">
@@ -177,7 +178,7 @@
             </div>
         </div>
     </div>
-    <!--CAROUSEL-->
+    <!--CAROUSEL, CANT GET IT TO WORK. MISSING SOME JAVASCRIPT?-->
     <div class="revBanner">
         <h1 id="zeroMargon">REVIEWS</h1>
         <h3>What our costomers say.</h3>
@@ -251,9 +252,9 @@
                 <form>
                     <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
                     <address>
-                        
+
                         Contact us and we will get back to you in 24 hours.<br>
-                       
+
                         <abbr title="Phone">
                             P:
                         </abbr>
